--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,12 @@
 {
-  "extends": "./tsconfig-base.json",
   "include": ["src/**/*"],
   "compilerOptions": {
-    "module": "ESNext",
-    "outDir": "dist/esm"
+    "module": "CommonJS",
+    "outDir": "dist/cjs",
+    "moduleResolution": "Node",
+    "target": "ESNext",
+    "declaration": true,
+    "strict": true,
+    "noImplicitAny": true
   }
 }
