--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "kysely-code-sync",
+  "name": "kysely-test-sync",
   "version": "0.1.0",
   "author": "Joseph T. Lapp <arachnojoe@gmail.com>",
   "license": "MIT",
-  "description": "Utility for keeping code segments and tests in sync with the Kysely repo",
+  "description": "Utility for keeping tests and code segments in sync with the Kysely repo",
   "repository": {
     "type": "git",
-    "url": "https://github.com/jtlapp/kysely-code-sync"
+    "url": "https://github.com/jtlapp/kysely-test-sync"
   },
   "keywords": [
     "kysely",
