feat/test: use test config; sort actual stderr; support raw and ref adapted URLs

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "clean": "rm -rf node_modules & rm -rf dist & rm -rf test/node/dist",
     "format": "prettier --write \"**/*.{js,ts,tsx,md}\"",
     "build": "rm -rdf dist && tsc",
-    "test": "npm run build && rm -rdf test/node/src/temp && mocha --timeout 5000 'src/**/*.test.js'"
+    "test": "npm run build && rm -rdf test/node/src/temp && mocha --timeout 5000 'dist/**/*.test.js'"
   },
   "dependencies": {},
   "devDependencies": {
