--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist", "test"],
   "compilerOptions": {
     "module": "CommonJS",
     "outDir": "dist/cjs",
