--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "kysely-test-sync",
-  "version": "0.5.8",
+  "version": "0.5.9",
   "author": "Joseph T. Lapp <arachnojoe@gmail.com>",
   "license": "MIT",
-  "description": "Utility for keeping code and tests in sync with the Kysely repo",
+  "description": "Utility for running Kysely dialects/extensions against Kysely's test suite",
   "repository": {
     "type": "git",
     "url": "https://github.com/jtlapp/kysely-test-sync"
